<package format="3">
  <name>tile_map</name>
  <version>3.1.0</version>
  <description>

     Tile map provides a slippy map style interface for visualizing 
     OpenStreetMap and GoogleMap tiles.  A mapviz visualization plug-in is also
     implemented

  </description>
  <author>Marc Alban</author>
  <author>P. J. Reed</author>
  <maintainer email="swri-robotics@swri.org">Southwest Research Institute</maintainer>
  <license>BSD</license>
  <url>https://github.com/swri-robotics/mapviz</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>libjsoncpp-dev</build_depend>
  <build_depend>qt-base-dev</build_depend>
  <build_export_depend>qt-base-dev</build_export_depend>

  <depend>mapviz</depend>
  <depend>pluginlib</depend>
  <depend>qt_gui_cpp</depend>
  <depend>rclcpp</depend>
  <depend>swri_math_util</depend>
  <depend>swri_transform_util</depend>
  <depend>tf2</depend>
  <depend>yaml-cpp</depend>

  <exec_depend>libjsoncpp</exec_depend>
  <exec_depend>libqtcore</exec_depend>
  <exec_depend>libqtgui</exec_depend>
  <exec_depend>libqtopengl</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <mapviz plugin="${prefix}/mapviz_plugins.xml" />
  </export>
</package>


