<package format="3">
  <name>mapviz_plugins</name>
  <version>3.1.0</version>
  <description>

    Common plugins for the Mapviz visualization tool

  </description>
  <author>Marc Alban</author>
  <author>P. J. Reed</author>
  <maintainer email="swri-robotics@swri.org">Southwest Research Institute</maintainer>
  <license>BSD</license>
  <url>https://github.com/swri-robotics/mapviz</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>qt-base-dev</build_depend>
  <build_export_depend>qt-base-dev</build_export_depend>

  <depend>ament_index_cpp</depend>
  <depend>assimp</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>gps_msgs</depend>
  <depend>image_transport</depend>
  <depend>libopencv-dev</depend>
  <depend>map_msgs</depend>
  <depend>mapviz</depend>
  <depend>marti_common_msgs</depend>
  <depend>marti_nav_msgs</depend>
  <depend>marti_sensor_msgs</depend>
  <depend>marti_visualization_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pluginlib</depend>
  <depend>qt_gui_cpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>stereo_msgs</depend>
  <depend>swri_image_util</depend>
  <depend>swri_math_util</depend>
  <depend>swri_route_util</depend>
  <depend>swri_transform_util</depend>
  <depend>tf2</depend>
  <depend>urdf</depend>
  <depend>visualization_msgs</depend>
  
  <exec_depend>libqtcore</exec_depend>
  <exec_depend>libqtgui</exec_depend>
  <exec_depend>libqtopengl</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <mapviz plugin="${prefix}/mapviz_plugins.xml" />
  </export>

</package>


